# learningPlaywrite

./: README.md  pyproject.toml
src/: Home.py
src/pages/: page1.py  page2.py  page3.py  page4.py  page5.py
tests/: conftest.py  test_home.py  test_page1.py  test_page2.py  test_page3.py  test_page4.py  test_page5.py
