[project]
name = "learningPlaywrite"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "tanner-ray-martin", email = "tanner.ray.martin.123@gmail.com"}]
requires-python = ">= 3.11"
dependencies = ["streamlit>=1.39.0,<1.40", "plotly>=5.24.1,<5.25", "bokeh>=3.6.0,<3.7", "altair>=5.4.1,<5.5", "pytest>=8.3.3,<8.4", "playwright>=1.47.0,<1.48"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
learningPlaywrite = { path = ".", editable = true }

[tool.pixi.tasks]
app = "streamlit run src/Home.py"
test = "pytest tests"
